@@ -1,3 +1,9 @@
+myproxy-oauth (0.26-1+gt6.@distro@) @distro@; urgency=low
+
+  * Move apache config file deployment into setup script
+
+ -- Globus Toolkit <support@globus.org>  Mon, 13 Mar 2017 16:34:10 -0400
+
 myproxy-oauth (0.25-1+gt6.@distro@) @distro@; urgency=low
 
   * Python exception handling workaround for 2.5-3.x
